# omni3_pkg

./: README.md
mo_hinh_robot/: package.xml
mo_hinh_robot/config/: controllers.yaml
mo_hinh_robot/launch/: arm_urdf.launch  gazebo.launch
mo_hinh_robot/meshes/: arm1.STL  arm2.STL  front_wheel.STL  right_wheel.STL
mo_hinh_robot/rviz/: mo_hinh_robot.rviz
mo_hinh_robot/scripts/: odom_publisher.py
mo_hinh_robot/urdf/: mo_hinh_robot.urdf
moveit_robot_arm_sim/config/: fake_controllers.yaml  joint_limits.yaml  new_ros_controllers.yaml
moveit_robot_arm_sim/launch/: move_group.launch  planning_context.launch  sensor_manager.launch.xml
omni3ros_pkg/mo_hinh_robot/: CMakeLists.txt
omni3ros_pkg/mo_hinh_robot/config/: controllers.yaml  joint_names_mo_hinh_robot.yaml  joint_trajectory_controller.yaml
omni3ros_pkg/mo_hinh_robot/launch/: display.launch  gazebo.launch
omni3ros_pkg/mo_hinh_robot/meshes/: base_link.STL  imu_link.STL  left_wheel.STL  lidar_link.STL
omni3ros_pkg/mo_hinh_robot/rviz/: mo_hinh_robot.rviz
omni3ros_pkg/mo_hinh_robot/scripts/: keyboard_arm_control.py  odom_publisher.py  wheel_encoder_reader.py
omni3ros_pkg/mo_hinh_robot/urdf/: mo_hinh_robot.urdf
omni3ros_pkg/moveit_robot_arm_sim/: package.xml
omni3ros_pkg/moveit_robot_arm_sim/config/: mo_hinh_robot.srdf  ompl_planning.yaml  stomp_planning.yaml
omni3ros_pkg/moveit_robot_arm_sim/launch/: full_robot_arm_sim.launch  gazebo.launch
omni3ros_pkg/teleop_omni3/: CMakeLists.txt  package.xml
omni3ros_pkg/teleop_omni3/launch/: teleop_omni3.launch
(+1 files in other folders)
